--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
 
     <script src="script.js"></script>
 
-    <footer class="footer">
-      © 2026 Desenvolvido por <strong>Arthur Martins</strong>
-    </footer>
-
+<footer class="footer">
+  © 2026 Desenvolvido por Arthur Martins
+</footer>
 </body>
 
 </html>
