css modificado e footer adicionado no index.html

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
 
     <script src="script.js"></script>
 
-<footer class="footer">
-  © 2026 Desenvolvido por Arthur Martins
-</footer>
+
+
 </body>
+<footer class="footer">
+  © 2026 • Desenvolvido por Arthur Martins
+</footer>
 
 </html>
