footer pronto agora

--- a/index.html
+++ b/index.html
@@ -55,14 +55,16 @@
       </section>
     </div>
   </div>
+  
+   <div class="wrap">
+    <!-- header + grid + tudo do site -->
 
-    <script src="script.js"></script>
-
-
-
+    <footer class="footer">
+      © 2026 • Desenvolvido por Arthur Martins
+    </footer>
+  </div>
+ 
+    <script src="index.js"></script>
 </body>
-<footer class="footer">
-  © 2026 • Desenvolvido por Arthur Martins
-</footer>
 
 </html>
